--- a/ASM_Shepoo/src/main/resources/application.properties
+++ b/ASM_Shepoo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mvc.view.prefix: /views/
 spring.mvc.view.suffix: .jsp
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;database=J5Shop;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;database=Shepoo;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
