--- a/ASM_Shepoo/src/main/resources/application.properties
+++ b/ASM_Shepoo/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.web.locale-resolver=fixed
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 spring.datasource.url=jdbc:sqlserver://localhost:1433;database=Shepoo;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=123456
