update funtion forgotPass

--- a/ASM_Shepoo/src/main/resources/application.properties
+++ b/ASM_Shepoo/src/main/resources/application.properties
@@ -19,3 +19,11 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2014Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto = none
 
+server.servlet.session.timeout=30
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nguyenlvps18843@fpt.edu.vn
+spring.mail.password=30october2k2
+spring.mail.properties.mail.smpt.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
